# wgpu-beginner-project

./: .gitignore  Cargo.toml  README.md
res/car/: Car.mtl
res/lik/: lik.mtl
src/: camera.rs  chunk.rs  cube.rs  debug_info.rs  engine.rs  generation.rs  instance.rs  light.rs  main.rs  main_state.rs  main_tmp.rs  mipmap.rs  model.rs  quad.rs  render_pipeline_tools.rs  texture.rs  uniform_matrix.rs  vertex_index.rs  window.rs  world.rs
src/modeling/: custom_models.rs  instance.rs  mod.rs  model.rs  vertex_index.rs
src/rendering/: graphics.rs  mod.rs  object.rs  pipeline.rs  renderer.rs  uniforms.rs
src/shaders/: light.frag  light.vert  light.vert.spv  shader.frag  shader.frag.spv  shader.vert  shader.vert.spv  sweep.timestamp
src/shaders/blit/: blit.frag
