[package]
name = "first_gwpu_graphics"
version = "0.1.0"
authors = ["Leon <kings.of.funny.gemplays@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.9.0"
winit = "0.25.0"
bytemuck = { version = "1.7", features = [ "derive" ] }
nalgebra = "0.27.1"
futures = "0.3.15"
anyhow = "1.0.41"
tobj = "3.0.1"
image = "0.23.14"
rand = "0.8.4"
wgpu_glyph = "0.13.0"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"